// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon> should display the correct size prop size l 1`] = `
<DocumentFragment>
  <svg
    class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
    data-testid="icon-svg"
    fill="currentColor"
    height="48px"
    viewBox="0 0 100 100"
    width="48px"
  >
    <path
      d="M100 56.563H56.562V100H43.438V56.562H0V43.438h43.438V0h13.124v43.438H100z"
    />
  </svg>
</DocumentFragment>
`;

exports[`<Icon> should display the correct size prop size m 1`] = `
<DocumentFragment>
  <svg
    class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
    data-testid="icon-svg"
    fill="currentColor"
    height="32px"
    viewBox="0 0 100 100"
    width="32px"
  >
    <path
      d="M100 56.563H56.562V100H43.438V56.562H0V43.438h43.438V0h13.124v43.438H100z"
    />
  </svg>
</DocumentFragment>
`;

exports[`<Icon> should display the correct size prop size s 1`] = `
<DocumentFragment>
  <svg
    class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
    data-testid="icon-svg"
    fill="currentColor"
    height="24px"
    viewBox="0 0 100 100"
    width="24px"
  >
    <path
      d="M100 56.563H56.562V100H43.438V56.562H0V43.438h43.438V0h13.124v43.438H100z"
    />
  </svg>
</DocumentFragment>
`;

exports[`<Icon> should display the correct size prop size xl 1`] = `
<DocumentFragment>
  <svg
    class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
    data-testid="icon-svg"
    fill="currentColor"
    height="64px"
    viewBox="0 0 100 100"
    width="64px"
  >
    <path
      d="M100 56.563H56.562V100H43.438V56.562H0V43.438h43.438V0h13.124v43.438H100z"
    />
  </svg>
</DocumentFragment>
`;

exports[`<Icon> should display the correct size prop size xs 1`] = `
<DocumentFragment>
  <svg
    class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
    data-testid="icon-svg"
    fill="currentColor"
    height="16px"
    viewBox="0 0 100 100"
    width="16px"
  >
    <path
      d="M100 56.563H56.562V100H43.438V56.562H0V43.438h43.438V0h13.124v43.438H100z"
    />
  </svg>
</DocumentFragment>
`;

exports[`<Icon> should display the correct size prop size xxl 1`] = `
<DocumentFragment>
  <svg
    class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
    data-testid="icon-svg"
    fill="currentColor"
    height="96px"
    viewBox="0 0 100 100"
    width="96px"
  >
    <path
      d="M100 56.563H56.562V100H43.438V56.562H0V43.438h43.438V0h13.124v43.438H100z"
    />
  </svg>
</DocumentFragment>
`;

exports[`<Icon> should display the correct size prop size xxs 1`] = `
<DocumentFragment>
  <svg
    class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
    data-testid="icon-svg"
    fill="currentColor"
    height="12px"
    viewBox="0 0 100 100"
    width="12px"
  >
    <path
      d="M100 56.563H56.562V100H43.438V56.562H0V43.438h43.438V0h13.124v43.438H100z"
    />
  </svg>
</DocumentFragment>
`;

exports[`<Icon> should display the correct size prop size xxxl 1`] = `
<DocumentFragment>
  <svg
    class="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
    data-testid="icon-svg"
    fill="currentColor"
    height="128px"
    viewBox="0 0 100 100"
    width="128px"
  >
    <path
      d="M100 56.563H56.562V100H43.438V56.562H0V43.438h43.438V0h13.124v43.438H100z"
    />
  </svg>
</DocumentFragment>
`;

exports[`<Icon> should matches snapshot 1`] = `
<svg
  className="IconStyle__VerticalCenteredSvg-x7d280-0 cJSNzi"
  data-testid="icon-svg"
  fill="currentColor"
  height="1em"
  viewBox="0 0 100 100"
  width="1em"
>
  <path
    d="M100 56.563H56.562V100H43.438V56.562H0V43.438h43.438V0h13.124v43.438H100z"
  />
</svg>
`;
